--- a/addLocation.html
+++ b/addLocation.html
@@ -1,90 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin - Add Location and Capacity</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+  </head>
 
-<body class="bg-light">
+  <body class="bg-light">
+    <iframe
+      src="header.html"
+      frameborder="0"
+      style="width: 100%; height: 60px"
+    ></iframe>
     <div class="container mt-5">
-        <h2 class="mb-4">Add UTAR Location and Class Capacity</h2>
-        <form id="locationCapacityForm">
-            <!-- Location Input -->
-            <div class="form-group">
-                <label for="locationInput">UTAR Location:</label>
-                <input type="text" class="form-control" id="locationInput" name="locationInput" placeholder="Enter UTAR location" required>
-            </div>
+      <h2 class="mb-4">Add UTAR Location and Class Capacity</h2>
+      <form id="locationCapacityForm">
+        <!-- Location Input -->
+        <div class="form-group">
+          <label for="locationInput">UTAR Location:</label>
+          <input
+            type="text"
+            class="form-control"
+            id="locationInput"
+            name="locationInput"
+            placeholder="Enter UTAR location"
+            required
+          />
+        </div>
 
-            <!-- Max Persons Input -->
-            <div class="form-group">
-                <label for="maxPersonsInput">Maximum Persons Per Class:</label>
-                <input type="number" class="form-control" id="maxPersonsInput" name="maxPersonsInput" placeholder="Enter max persons" required min="1">
-            </div>
-			
-			<div class="form-group">
-    <label>Suitable Class Type:</label><br>
-    <input type="checkbox" id="lecture" name="courseType" value="Lecture" checked disabled>
-    <label for="lecture">Lecture</label><br>
+        <!-- Max Persons Input -->
+        <div class="form-group">
+          <label for="maxPersonsInput">Maximum Persons Per Class:</label>
+          <input
+            type="number"
+            class="form-control"
+            id="maxPersonsInput"
+            name="maxPersonsInput"
+            placeholder="Enter max persons"
+            required
+            min="1"
+          />
+        </div>
 
-    <input type="checkbox" id="tutorial" name="courseType" value="Tutorial">
-    <label for="tutorial">Tutorial</label><br>
+        <div class="form-group">
+          <label>Suitable Class Type:</label><br />
+          <input
+            type="checkbox"
+            id="lecture"
+            name="courseType"
+            value="Lecture"
+            checked
+            disabled
+          />
+          <label for="lecture">Lecture</label><br />
 
-    <input type="checkbox" id="practical" name="courseType" value="Practical">
-    <label for="practical">Practical</label>
-</div>
+          <input
+            type="checkbox"
+            id="tutorial"
+            name="courseType"
+            value="Tutorial"
+          />
+          <label for="tutorial">Tutorial</label><br />
 
-            <!-- Submit Button -->
-            <button type="submit" class="btn btn-primary">Add</button>
-        </form>
+          <input
+            type="checkbox"
+            id="practical"
+            name="courseType"
+            value="Practical"
+          />
+          <label for="practical">Practical</label>
+        </div>
+
+        <!-- Submit Button -->
+        <button type="submit" class="btn btn-primary">Add</button>
+      </form>
     </div>
 
     <!-- Include Bootstrap JavaScript and other necessary scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-				<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-<script>
-const firebaseConfig = {
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script>
+      const firebaseConfig = {
         apiKey: "AIzaSyBtSdg0XwU3cePNEn-HVlof8vj_imx0guA",
         authDomain: "utarapp-9f3db.firebaseapp.com",
         projectId: "utarapp-9f3db",
         storageBucket: "utarapp-9f3db.appspot.com",
         messagingSenderId: "331019317153",
-        appId: "1:331019317153:web:79d3d098d6d5c3759da5e0"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-	
-	document.getElementById("locationCapacityForm").addEventListener('submit', async (event) => {
-        event.preventDefault(); // Prevents the default form submission
+        appId: "1:331019317153:web:79d3d098d6d5c3759da5e0",
+      };
+      firebase.initializeApp(firebaseConfig);
+      const db = firebase.firestore();
 
-        const locationValue = document.getElementById("locationInput").value;
-        const maxPersonsValue = document.getElementById("maxPersonsInput").value;
-		const selectedTypes = Array.from(document.querySelectorAll('input[name="courseType"]:checked')).map(checkbox => checkbox.value);
+      document
+        .getElementById("locationCapacityForm")
+        .addEventListener("submit", async (event) => {
+          event.preventDefault(); // Prevents the default form submission
 
-        if (locationValue && maxPersonsValue) {
+          const locationValue = document.getElementById("locationInput").value;
+          const maxPersonsValue =
+            document.getElementById("maxPersonsInput").value;
+          const selectedTypes = Array.from(
+            document.querySelectorAll('input[name="courseType"]:checked')
+          ).map((checkbox) => checkbox.value);
+
+          if (locationValue && maxPersonsValue) {
             try {
-                await db.collection("location").add({
-                    venue: locationValue,
-                    maxSize: parseInt(maxPersonsValue),
-					classTypes: selectedTypes
-                });
+              await db.collection("location").add({
+                venue: locationValue,
+                maxSize: parseInt(maxPersonsValue),
+                classTypes: selectedTypes,
+              });
 
-                alert("Successfully added the location and class capacity!");
+              alert("Successfully added the location and class capacity!");
             } catch (error) {
-                console.error("Error adding location and class capacity:", error);
-                alert("An error occurred. Please try again.");
+              console.error("Error adding location and class capacity:", error);
+              alert("An error occurred. Please try again.");
             }
-        } else {
+          } else {
             alert("Please provide a location and max persons.");
-        }
-    });
-</script>
-</body>
-
+          }
+        });
+    </script>
+  </body>
 </html>
