--- a/addTimetable.html
+++ b/addTimetable.html
@@ -30,6 +30,11 @@ button[type="submit"] {
 </head>
 
 <body class="bg-light">
+    <iframe
+    src="header.html"
+    frameborder="0"
+    style="width: 100%; height: 60px"
+  ></iframe>
     <div class="container mt-5">
         <h2 class="mb-4">Add Timetable Entry</h2>
         <form id="timetableForm">
