--- a/manageAssignment.html
+++ b/manageAssignment.html
@@ -1,69 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Assignments List</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-	
-	<style>
-	.container {
-    max-width: 800px;
-}
 
-#assignmentsList .list-group-item-action:hover {
-    background-color: #f8f9fa;
-}
-	</style>
-</head>
-<body>
-<div class="container mt-5">
-    <h2>Assignments List</h2>
-    <div id="assignmentsList" class="list-group">
+    <style>
+      .container {
+        max-width: 800px;
+      }
+
+      #assignmentsList .list-group-item-action:hover {
+        background-color: #f8f9fa;
+      }
+    </style>
+  </head>
+  <body>
+    <iframe
+      src="header.html"
+      frameborder="0"
+      style="width: 100%; height: 60px"
+    ></iframe>
+    <div class="container mt-5">
+      <h2>Assignments List</h2>
+      <div id="assignmentsList" class="list-group">
         <!-- Assignments will be loaded here dynamically -->
+      </div>
     </div>
-</div>
 
-<script>
-// Your web app's Firebase configuration
-var firebaseConfig = {
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
         apiKey: "AIzaSyBtSdg0XwU3cePNEn-HVlof8vj_imx0guA",
         authDomain: "utarapp-9f3db.firebaseapp.com",
         authDomain: "pctan9491.github.io",
         projectId: "utarapp-9f3db",
         storageBucket: "utarapp-9f3db.appspot.com",
         messagingSenderId: "331019317153",
-        appId: "1:331019317153:web:79d3d098d6d5c3759da5e0"
-};
+        appId: "1:331019317153:web:79d3d098d6d5c3759da5e0",
+      };
 
-// Initialize Firebase
-firebase.initializeApp(firebaseConfig);
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
 
-var db = firebase.firestore();
+      var db = firebase.firestore();
 
-// Check for loggedInLecturerId
-const loggedInLecturerId = localStorage.getItem('saveLoginID');
+      // Check for loggedInLecturerId
+      const loggedInLecturerId = localStorage.getItem("saveLoginID");
 
-if(loggedInLecturerId) {
-    db.collection("assignments").where("lecId", "==", loggedInLecturerId).get().then((querySnapshot) => {
-        const assignmentsList = document.getElementById("assignmentsList");
-        querySnapshot.forEach((doc) => {
-            const assignment = doc.data();
-            const listItem = document.createElement("a");
-            listItem.href = `assignmentDetail.html?assignmentId=${doc.id}`;
-            listItem.classList.add("list-group-item", "list-group-item-action");
-            listItem.innerHTML = `<h5 class="mb-1">${assignment.title}</h5><p class="mb-1">Due Date: ${assignment.dueDate}</p>`;
-            assignmentsList.appendChild(listItem);
-        });
-    }).catch((error) => {
-        console.log("Error getting documents: ", error);
-    });
-} else {
-    console.log("Lecturer not logged in or does not match.");
-}
-
-</script>
-</body>
+      if (loggedInLecturerId) {
+        db.collection("assignments")
+          .where("lecId", "==", loggedInLecturerId)
+          .get()
+          .then((querySnapshot) => {
+            const assignmentsList = document.getElementById("assignmentsList");
+            querySnapshot.forEach((doc) => {
+              const assignment = doc.data();
+              const listItem = document.createElement("a");
+              listItem.href = `assignmentDetail.html?assignmentId=${doc.id}`;
+              listItem.classList.add(
+                "list-group-item",
+                "list-group-item-action"
+              );
+              listItem.innerHTML = `<h5 class="mb-1">${assignment.title}</h5><p class="mb-1">Due Date: ${assignment.dueDate}</p>`;
+              assignmentsList.appendChild(listItem);
+            });
+          })
+          .catch((error) => {
+            console.log("Error getting documents: ", error);
+          });
+      } else {
+        console.log("Lecturer not logged in or does not match.");
+      }
+    </script>
+  </body>
 </html>
