--- a/notificationCRUD.html
+++ b/notificationCRUD.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
     <title>Admin Main Page</title>
-</head>
-<body class="bg-light">
-
+  </head>
+  <body class="bg-light">
+    <iframe
+      src="header.html"
+      frameborder="0"
+      style="width: 100%; height: 60px"
+    ></iframe>
     <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <div class="card">
-                    <div class="card-body">
-                        <h2 class="text-center mb-4">Admin Notification Page</h2>
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <h2 class="text-center mb-4">Admin Notification Page</h2>
 
-                        <a href="createNotification.html" class="btn btn-primary btn-block mb-3">Create Notification</a>
-                        <a href="viewNotification.html" class="btn btn-primary btn-block">View Notification</a>
-                    </div>
-                </div>
+              <a
+                href="createNotification.html"
+                class="btn btn-primary btn-block mb-3"
+                >Create Notification</a
+              >
+              <a href="viewNotification.html" class="btn btn-primary btn-block"
+                >View Notification</a
+              >
             </div>
+          </div>
         </div>
+      </div>
     </div>
 
     <!-- jQuery library -->
@@ -29,5 +42,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <!-- Bootstrap JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
+  </body>
 </html>
